--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.39.0
-python-docx==1.1.2
-text-unidecode==1.3
-unidecode==1.3.8
+streamlit
+openai>=1.0.0
+python-dotenv
+requests
+beautifulsoup4
+pandas
